assets/css/main.css
/* ... */
.navbar-custom .avatar-container .avatar-img {
  width: 100%;
  {% unless site.round-avatar == false %}
    border-radius: 50%;
  {% endunless %}
  display: block;
}

.navbar-custom.top-nav-expanded .avatar-container {
  display: none;
}

@media (min-width: 768px) {
  .navbar-custom .avatar-container {
    width: 6.25rem;
  }

  .navbar-custom .avatar-container .avatar-img-border {
    width: 100%;
    {% unless site.round-avatar == false %}
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    {% endunless %}
  }

  .navbar-custom .avatar-container .avatar-img {
    width: 100%;
  }
}

/* --- Footer --- */

footer {
  padding: 1.875rem 0;
  border-top: 1px #EAEAEA solid;
  margin-top: 3.125rem;
  font-size: 0.875rem;
  background-color: {{ site.footer-col | default: "#F5F5F5" }};
  {% if site.footer-img %}
    background-image: url({{ site.footer-img | relative_url }});
    background-attachment: fixed;
  {% endif %}
}

footer p.text-muted {
  color: {{ site.footer-text-col | default: "#777777" }} !important;
}

footer a {
  color: {{ site.footer-link-col | default: "#404040" }};
}

footer .list-inline {
  margin: 0;
  padding: 0;
  margin-bottom: 1.875rem;
}
footer .copyright {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-align: center;
  margin-bottom: 0;
  margin-top: 0;
}
footer .theme-by {
  text-align: center;
  margin: 0.625rem 0 0;
}
footer .footer-custom-content {
  text-align: center;
  margin-bottom: 0.9375rem;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

@media (min-width: 768px) {
  footer {
    padding: 3.125rem 0;
  }
  footer .footer-links {
    font-size: 1.125rem;
  }
  footer .copyright {
    font-size: 1rem;
  }
  footer .footer-custom-content {
    font-size: 1rem;
  }
}

/* --- Post preview --- */

.post-preview {
  padding: 1.25rem 0;
  border-bottom: 1px solid #eee;
}

@media (min-width: 768px) {
  .post-preview {
    padding: 2.1875rem 0;
  }
}

.post-preview:last-child {
  border-bottom: 0;
}

.post-preview a {
  text-decoration: none;
  color: #404040;
}

.post-preview a:focus,
.post-preview a:hover {
  text-decoration: none;
  color: {{ site.hover-col | default: "#0085A1" }};
}

.post-preview .post-title {
  font-size: 1.875rem;
  margin-top: 0;
}
.post-preview .post-subtitle {
  margin: 0;
  font-weight: 300;
  margin-bottom: 0.625rem;
}
.post-preview .post-meta,
.post-heading .post-meta {
  color: #808080;
  font-size: 1.125rem;
  font-style: italic;
  margin: 0 0 0.625rem;
}
.post-preview .post-entry {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.post-entry-container {
  display: inline-block;
  width: 100%;
}
.post-entry {
  width: 100%;
}
.post-image {
  float: right;
  height: 12rem;
  width: 12rem;
  margin-top: -2.1875rem;
  filter: grayscale(90%);
}
.post-image:hover {
  filter: grayscale(0%);
}
.post-image img {
  border-radius: 6.25rem;
  height: 12rem;
  width: 12rem;
}
.post-preview .post-read-more {
  font-weight: 800;
}

@media (min-width: 768px) {
  .post-preview .post-title {
    font-size: 2.25rem;
  }
}

/* --- Tags --- */

.blog-tags {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #999;
  font-size: 0.9375rem;
  margin-bottom: 1.875rem;
}

.blog-tags a {
  color: {{ site.link-col | default: "#008AFF" }};
  text-decoration: none;
  padding: 0 0.3125rem;
}

.blog-tags a:hover {
  border-radius: 2px;
  color: {{ site.hover-col | default: "#0085A1" }};
  background-color: #EEE;
}

.post-preview .blog-tags {
  margin-top: 0.3125rem;
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .post-preview .blog-tags {
    margin-top: 0.625rem;
  }
}

@media (max-width: 500px) {
  .post-image, .post-image img {
    height: 6.25rem;
    width: 6.25rem;
  }

  .post-image {
    width: 100%;
    text-align: center;
    margin-top: 0;
    float: left;
  }
}
/* --- Post and page headers --- */

.intro-header {
  margin: 5rem 0 1.25rem;
  position: relative;
}
.intro-header.big-img {
  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  margin-top: 3.1875rem; /* The small navbar is 50px tall + 1px border */
  margin-bottom: 2.1875rem;
}
.intro-header.big-img .big-img-transition {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  -webkit-transition: opacity 1s linear;
  -moz-transition: opacity 1s linear;
  transition: opacity 1s linear;
}
.intro-header .page-heading {
  text-align: center;
}
.intro-header.big-img .page-heading,
.intro-header.big-img .post-heading {
  padding: 6.25rem 0;
  color: #FFF;
  text-shadow: 1px 1px 3px #000;
}
.intro-header .page-heading h1 {
  margin-top: 0;
  font-size: 3.125rem;
}
.intro-header .post-heading h1 {
  margin-top: 0;
  font-size: 2.1875rem;
}
.intro-header .page-heading .page-subheading,
.intro-header .post-heading .post-subheading {
  font-size: 1.6875rem;
  line-height: 1.1;
  display: block;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 300;
  margin: 0.625rem 0 0;
}
.intro-header .post-heading .post-subheading {
  margin-bottom: 1.25rem;
}
.intro-header.big-img .page-heading .page-subheading,
.intro-header.big-img .post-heading .post-subheading {
  font-weight: 400;
}
.intro-header.big-img .page-heading hr {
  box-shadow: 1px 1px 3px #000;
  -webkit-box-shadow: 1px 1px 3px #000;
  -moz-box-shadow: 1px 1px 3px #000;
}
.intro-header.big-img .post-heading .post-meta {
  color: #EEE;
}
/* ... */

